--- a/frontend/src/assets/styles/tailwind/index.css
+++ b/frontend/src/assets/styles/tailwind/index.css
@@ -16,39 +16,48 @@
 		cursor: pointer;
 	}
 
+  html,
+  body,
+  #root {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
+
   body {
-    @apply text-gray-500 dark:text-gray-400 text-sm bg-gray-100 dark:bg-msgray-900 leading-normal;
+    @apply text-gray-500 dark:text-gray-400 bg-gray-100 dark:bg-msgray-900 leading-normal;
+    font-size: 13px;
     -webkit-font-smoothing: antialiased;
   }
 
   h1,
   .h1 {
-    @apply text-4xl font-bold text-gray-900 dark:text-gray-100;
+    @apply text-3xl font-bold text-gray-900 dark:text-gray-100;
   }
 
   h2,
   .h2 {
-    @apply text-3xl font-bold text-gray-900 dark:text-gray-100;
+    @apply text-2xl font-bold text-gray-900 dark:text-gray-100;
   }
 
   h3,
   .h3 {
-    @apply text-2xl font-semibold text-gray-900 dark:text-gray-100;
+    @apply text-xl font-semibold text-gray-900 dark:text-gray-100;
   }
 
   h4,
   .h4 {
-    @apply text-xl font-semibold text-gray-900 dark:text-gray-100;
+    @apply text-lg font-semibold text-gray-900 dark:text-gray-100;
   }
 
   h5,
   .h5 {
-    @apply text-lg font-semibold text-gray-900 dark:text-gray-100;
+    @apply text-base font-semibold text-gray-900 dark:text-gray-100;
   }
 
   h6,
   .h6 {
-    @apply text-base font-semibold text-gray-900 dark:text-gray-100;
+    @apply text-sm font-semibold text-gray-900 dark:text-gray-100;
   }
 
   hr {
